--- a/styles/style.css
+++ b/styles/style.css
@@ -9,21 +9,21 @@ body {
 }
 .container .esquerdo {
   width: 50%;
-  background-color: blueviolet;
+  background-color: #8f43ee;
 }
 .container .esquerdo .texto {
   margin-top: 40%;
   text-align: center;
   font-size: 150px;
-  color: aquamarine;
+  color: #413543;
 }
 .container .direito {
   width: 50%;
-  background-color: aquamarine;
+  background-color: #413543;
 }
 .container .direito .texto {
   margin-top: 40%;
   text-align: center;
   font-size: 150px;
-  color: blueviolet;
+  color: #8f43ee;
 }/*# sourceMappingURL=style.css.map */
