--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,6 @@
+$cor-principal: #8f43ee;
+$cor-secundaria: #413543;
+
 body {
   margin: 0;
   padding: 0;
@@ -8,23 +11,23 @@ body {
   display: flex;
   .esquerdo {
     width: 50%;
-    background-color: blueviolet;
+    background-color: $cor-principal;
     .texto {
       margin-top: 40%;
       text-align: center;
       font-size: 150px;
-      color: aquamarine;
+      color: $cor-secundaria;
     }
   }
 
   .direito {
     width: 50%;
-    background-color: aquamarine;
+    background-color: $cor-secundaria;
     .texto {
       margin-top: 40%;
       text-align: center;
       font-size: 150px;
-      color: blueviolet;
+      color: $cor-principal;
     }
   }
 }
